[workspace]
members = ["crates/va-link-server"]
resolver = "2"

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
url = "2.5.0"
validator = { version = "0.18.1", features = ["derive"] }
dotenvy = "0.15.7"
rand = "0.8.5"
hyper = { version = "1.0.0", features = ["full"], optional = true }