[package]
name = "va-link-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json = "1.0.115"
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
chrono = { version = "0.4.37", features = ["serde"] }
rand = "0.8.5"
url = "2.5.0"
validator = { version = "0.18.1", features = ["derive"] }
dotenvy = "0.15.7"

# For middleware
tower-http = { version = "0.5.2", features = ["trace", "cors"] }

[dev-dependencies]
http-body-util = "0.1.1"
hyper = { version = "1.2.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
tokio-test = "0.4.4"